# someip-parse-rs

./: .travis.yml  Cargo.toml  README.md  README.tpl  appveyor.yml
.github/workflows/: coverage.yml  main.yml
.travis/: calculate_coverage.sh
coverage/: coverage.bash
ensure_no_std/: Cargo.toml  README.md
examples/: count_messages_by_id.rs  print_message_ids.rs  print_messages.rs
proptest-regressions/: lib.txt  sd.txt  someip_header.txt  someip_msg_slice.txt  someip_msgs_iterator.txt
src/: err.rs  lib.rs  message_type.rs  return_code.rs  sd.rs  section_range.rs  slice_iterator.rs  some_ip_header.rs  some_ip_header_slice.rs  someip_header.rs  someip_msg_slice.rs  someip_msgs_iterator.rs  tp_buf.rs  tp_buf_config.rs  tp_header.rs  tp_pool.rs  tp_range.rs
src/err/: layer.rs  len_error.rs  len_source.rs  mod.rs  read_error.rs  sd_error.rs  sd_io_read_error.rs  sd_io_write_error.rs  sd_option_slice_error.rs  sd_read_error.rs  sd_slice_error.rs  sd_slice_write_error.rs  sd_value_error.rs  sd_write_error.rs  slice_write_space_error.rs  someip_header_error.rs  someip_header_io_read_error.rs  someip_header_read_error.rs  someip_slice_error.rs  tp_buf_config_error.rs  tp_offset_not_multiple_of_16_error.rs  tp_reassemble_error.rs  value_error.rs  write_error.rs
src/proptest_generators/: mod.rs
src/sd/: mod.rs  sd_entries.rs  sd_entries_checked_iterator.rs  sd_entries_iterator.rs  sd_entry.rs  sd_entry_slice.rs  sd_entry_with_options.rs  sd_event_group_entry_type.rs  sd_header.rs  sd_header_flags.rs  sd_option.rs  sd_option_slice.rs  sd_option_type.rs  sd_options.rs  sd_options_checked_iterator.rs  sd_options_index.rs  sd_options_iterator.rs  sd_slice.rs
src/sd/entries/: event_group_entry.rs  event_group_entry_slice.rs  event_group_entry_type.rs  mod.rs  service_entry.rs  service_entry_slice.rs  service_entry_type.rs  u24.rs  u4.rs  u4_bits.rs
src/sd/options/: configuration_option.rs  configuration_slice.rs  ipv4_endpoint_option.rs  ipv4_endpoint_slice.rs  ipv4_multicast_option.rs  ipv4_multicast_slice.rs  ipv4_sd_endpoint_option.rs  ipv4_sd_endpoint_slice.rs  ipv6_endpoint_option.rs  ipv6_endpoint_slice.rs  ipv6_multicast_option.rs  ipv6_multicast_slice.rs  ipv6_sd_endpoint_option.rs  ipv6_sd_endpoint_slice.rs  load_balancing_option.rs  load_balancing_slice.rs  mod.rs  transport_protocol.rs  unknown_slice.rs  (+1 more)
