[package]
name = "someip_parse"
version = "0.5.0"
edition = "2021"
authors = ["Julian Schmid <info@julianschmid.name>"]
description = "A library for parsing the SOME/IP network protocol (without payload interpretation)."
repository = "https://github.com/JulianSchmid/someip-parse-rs"
categories = ["network-programming", "parser-implementations"]
keywords = ["someip", "autosar"]
license = "BSD-3-Clause"
readme = "README.md"
exclude = [
    ".gitignore",
    ".travis.yml",
    ".github/*",
    ".gitlab-ci.yml",
    ".travis/*",
    "appveyor.yml"
]

[dependencies]

[dev-dependencies]
assert_matches = "1.5.0"
etherparse = "0.13.0"
proptest = "1.3.1"
rpcap = "1.0.0"
