[package]
name = "someip_parse"
version = "0.7.0"
edition = "2021"
rust-version = "1.81"
authors = ["Julian Schmid <info@julianschmid.name>"]
description = "A library for parsing the SOME/IP network protocol (without payload interpretation)."
repository = "https://github.com/JulianSchmid/someip-parse-rs"
categories = ["network-programming", "parser-implementations", "no-std", "no-std::no-alloc"]
keywords = ["someip", "autosar"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [
    ".gitignore",
    ".github/*",
    ".gitlab-ci.yml",
]

[features]
default = ["std"]
alloc = []
std = ["alloc", "arrayvec/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arrayvec = { version = "0.7.8", default-features = false }

[dev-dependencies]
etherparse = { version = "0.17.0", default-features = false }
proptest = "1.8.0"
rpcap = "1.0.0"
